--- a/src/data/levels/✨_Let's play/14_From Below/chat/es.yml
+++ b/src/data/levels/✨_Let's play/14_From Below/chat/es.yml
@@ -3,6 +3,7 @@ main:
   run: |
     set((m) => m.chat.winOnEnd = true);
   messages:
+  - <! 📹  Entrando en video chat...
   - hey,
   - juguemos un juego
   - |-
