Reusing memory.png in CPU Memory level

--- a/src/data/levels/04_Memory/01_CPU Memory/chat/en.yml
+++ b/src/data/levels/04_Memory/01_CPU Memory/chat/en.yml
@@ -10,6 +10,7 @@ main:
 
 other62:
   messages:
+  - <{memory.png}>
   - other things, like RAM mirrors, memory-mapped I/O, and the cartridge data
   - 🔗  everything is connected to the memory!
   - that's how the machine code interacts with the devices
