--- a/src/data/levels/05b_PPU/08_VRAM bridge/chat/en.yml
+++ b/src/data/levels/05b_PPU/08_VRAM bridge/chat/en.yml
@@ -10,10 +10,11 @@ how:
   messages:
   - through the video registers called 📍  PPUAddr and 📦  PPUData
   - they are like a bridge that connects the 🧠  CPU and 🖥️  PPU
-  - first, games put the VRAM address they want to write in 📍  PPUAddr
+  - first, games put the PPU address they want to write in 📍  PPUAddr
   - "(two consecutive writes: one for the high byte, and one for the low byte)"
   - then, they write to 📦  PPUData the byte they want to put in that address
   - <{PPUAddr_PPUData.png}>
+  - this lets the game's code access any region in PPU memory, including 👾  CHR-RAM, 🐏  VRAM and 🎨  Palette RAM
   responses:
   - nice, I guess I need to define the VRAM somewhere [exercise]
 
