--- a/src/data/levels/05b_PPU/08_VRAM bridge/chat/es.yml
+++ b/src/data/levels/05b_PPU/08_VRAM bridge/chat/es.yml
@@ -10,10 +10,11 @@ how:
   messages:
   - a través de los registros de video llamados 📍  PPUAddr y 📦  PPUData
   - son como un puente que conecta la 🧠  CPU y 🖥️  PPU
-  - primero, los juegos ponen la dirección de VRAM que quieren escribir en 📍  PPUAddr
+  - primero, los juegos ponen la dirección PPU que quieren escribir en 📍  PPUAddr
   - "(dos escrituras consecutivas: una para el byte alto, y una para el byte bajo)"
   - luego, escriben en 📦  PPUData el byte que quieren poner en esa dirección
   - <{PPUAddr_PPUData.png}>
+  - esto permite que el código del juego acceda a cualquier región de la memoria de la PPU, incluyendo 👾 CHR-RAM, 🐏 VRAM y 🎨 Palette RAM
   responses:
   - bien, supongo que necesito definir la VRAM en algún lugar [exercise]
 
