Improving PPU video tests (up to 5b.17)

--- a/src/data/levels/05b_PPU/10_Backgrounds 2-2 - Using Attribute tables/chat/en.yml
+++ b/src/data/levels/05b_PPU/10_Backgrounds 2-2 - Using Attribute tables/chat/en.yml
@@ -44,8 +44,7 @@ main:
 
 help:
   messages:
-  - what, you need help? 🤣
-  - well... I'm listening
+  - what? you need help?
   responses:
   - (*) help me with the math 🔢 [math]
   - (*) what's the backdrop color? 💧 [backdrop]
