--- a/src/data/levels/05b_PPU/10_Backgrounds 2-2 - Using Attribute tables/chat/es.yml
+++ b/src/data/levels/05b_PPU/10_Backgrounds 2-2 - Using Attribute tables/chat/es.yml
@@ -44,8 +44,7 @@ main:
 
 help:
   messages:
-  - ¿qué, necesitas ayuda? 🤣
-  - bueno... estoy escuchando
+  - ¿qué? ¿necesitas ayuda?
   responses:
   - (*) ayúdame con las matemáticas 🔢 [math]
   - (*) ¿cuál es el color de fondo? 💧 [backdrop]
