Fixing bad PPU bug caused by previous bugfix

--- a/src/data/levels/05b_PPU/23_Scrolling 2-2 - The Right Way/chat/en.yml
+++ b/src/data/levels/05b_PPU/23_Scrolling 2-2 - The Right Way/chat/en.yml
@@ -29,7 +29,8 @@ exercise:
       ```javascript this.loopy.onVisibleLine(this.cycle);```
   - |-
     📚  at the end of the `plotBG(...)` method, call:
-      ```javascript this.loopy.onPlot(x);```
+      ```javascript if (this.registers.ppuMask.showBackground)
+        this.loopy.onPlot(x);```
   - |-
     📚  in 🎛️  `PPUCtrl`, remove the `nameTableId` field; replace its assignment in the `onWrite(...)` method with:
       ```javascript this.ppu.loopy.onPPUCtrlWrite(value);```
