--- a/package.json
+++ b/package.json
@@ -3,20 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "npm run web",
-    "dev": "npm run web",
-    "web": "react-scripts start",
-    "desktop": "concurrently \"cross-env BROWSER=none react-scripts start\" \"cross-env ELECTRON_START_URL=http://localhost:3000 electron .\"",
+    "start": "vite",
+    "dev": "vite",
     "package": "rm -rf public/levels && node ./scripts/package-levels.js",
-    "deploy": "bash ./scripts/deploy.sh",
-    "build:web": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
-    "build:windows": "bash ./scripts/build-desktop-windows.sh",
-    "build:linux": "bash ./scripts/build-desktop-linux.sh",
-    "___": "___",
-    "test": "react-scripts test",
-    "electron": "electron",
-    "build:ghpages": "cross-env GENERATE_SOURCEMAP=false PUBLIC_URL=/emudevz-supersecret-link-pls-do-not-share react-scripts build",
-    "build:electron": "cross-env GENERATE_SOURCEMAP=false PUBLIC_URL=./ react-scripts build"
+    "build": "vite build",
+    "deploy": "bash ./scripts/deploy.sh"
   },
   "//": [
     "[!] Packages with fixed versions are conflictive. Do not update them.",
@@ -77,38 +68,12 @@
     "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
-    "ringbufferjs": "^2.0.0",
     "sinon": "^15.0.1",
     "sinon-chai": "^3.7.0",
     "updated-xterm-for-react": "5.2.0",
     "xterm": "5.2.0",
     "xterm-addon-fit": "^0.5.0",
     "yaml": "^2.1.1"
-  },
-  "main": "desktop.js",
-  "build": {
-    "productName": "emudevz",
-    "extends": null,
-    "extraFiles": [
-      "icons/icon-512x512.png"
-    ],
-    "linux": {
-      "target": "AppImage",
-      "category": "Utility"
-    },
-    "win": {
-      "target": "nsis"
-    },
-    "nsis": {
-      "oneClick": false,
-      "perMachine": true,
-      "allowElevation": true,
-      "allowToChangeInstallationDirectory": true,
-      "createDesktopShortcut": true,
-      "createStartMenuShortcut": true,
-      "installerIcon": "../public/icons/icon-windows.ico",
-      "uninstallerIcon": "../public/icons/icon-windows.ico"
-    }
   },
   "eslintConfig": {
     "extends": "react-app",
@@ -119,7 +84,6 @@
         ],
         "rules": {
           "import/no-anonymous-default-export": "off",
-          "import/no-webpack-loader-syntax": "off",
           "no-eval": "off",
           "no-control-regex": "off"
         }
@@ -143,13 +107,12 @@
     "chai": "^4.3.6",
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.3",
-    "electron": "6.0.12",
-    "electron-builder": "21.2.0",
     "husky": "^1.3.1",
     "mkdirp": "^1.0.4",
     "prettier": "2.2.1",
     "pretty-quick": "^1.10.0",
     "slug": "^8.2.2",
-    "worklet-loader": "^2.0.0"
+    "@vitejs/plugin-react": "^4.4.1",
+    "vite": "^6.3.5"
   }
 }
