--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
+    "ringbufferjs": "^2.0.0",
     "sinon": "^15.0.1",
     "sinon-chai": "^3.7.0",
     "updated-xterm-for-react": "5.2.0",
@@ -103,6 +104,7 @@
   ],
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
+    "@vitejs/plugin-react": "^4.4.1",
     "archiver": "^5.3.1",
     "chai": "^4.3.6",
     "concurrently": "^5.3.0",
@@ -112,7 +114,6 @@
     "prettier": "2.2.1",
     "pretty-quick": "^1.10.0",
     "slug": "^8.2.2",
-    "@vitejs/plugin-react": "^4.4.1",
     "vite": "^6.3.5"
   }
 }
