Fucking dependency hell. Updating xtermjs and fixing conflicts

--- a/package.json
+++ b/package.json
@@ -24,12 +24,17 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
     "@neshacker/6502-tools": "github:afska/6502#3de7e48e797fe5e32745b467015d57b0755b96e8",
+    "@pixi/canvas-renderer": "6.3.0",
     "@pixi/layers": "^1.0.11",
     "@rematch/core": "^2.2.0",
     "@rematch/loading": "^2.1.2",
     "@rematch/persist": "^2.1.2",
     "@uiw/codemirror-extensions-langs": "4.12.3",
     "@uiw/react-codemirror": "4.11.6",
+    "@xterm/addon-fit": "0.10.0",
+    "@xterm/addon-image": "0.8.0",
+    "@xterm/addon-webgl": "^0.18.0",
+    "@xterm/xterm": "5.5.0",
     "bootstrap": "^5.2.0",
     "broken-neees": "^1.0.62",
     "browserfs": "^1.4.3",
@@ -40,6 +45,7 @@
     "eslint-linter-browserify": "^9.13.0",
     "eventemitter3": "^4.0.7",
     "globals": "^15.12.0",
+    "grapheme-splitter": "^1.0.4",
     "highlight.js": "^11.11.1",
     "history": "^4.10.1",
     "javascript-time-ago": "^2.5.11",
@@ -52,28 +58,31 @@
     "path-browserify-esm": "^1.0.6",
     "pixi-filters": "^4.2.0",
     "pixi-lights": "^3.0.0",
-    "pixi.js": "^6.3.0",
+    "pixi.js": "6.3.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.5.0",
-    "react-diff-viewer": "3.1.1",
+    "react-diff-viewer-continued": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.3.5",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^4.4.0",
     "react-image-diff": "^0.1.0",
-    "react-redux": "^8.0.2",
+    "react-redux": "7.2.9",
     "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "ringbufferjs": "^2.0.0",
     "sinon": "^15.0.1",
     "sinon-chai": "^3.7.0",
-    "updated-xterm-for-react": "5.2.0",
-    "xterm": "5.2.0",
-    "xterm-addon-fit": "^0.5.0",
+    "updated-xterm-for-react": "5.5.1",
     "yaml": "^2.1.1"
+  },
+  "overrides": {
+    "@pixi/canvas-renderer": "6.3.0",
+    "@pixi/core": "6.3.0",
+    "react-redux": "7.2.9"
   },
   "eslintConfig": {
     "extends": "react-app",
