Fixing the 'Math.random()' thing

--- a/src/data/levels/05c_APU/14_Noise Channel 1-3 - Length counter/chat/en.yml
+++ b/src/data/levels/05c_APU/14_Noise Channel 1-3 - Length counter/chat/en.yml
@@ -47,7 +47,7 @@ exercise:
       **->** if `!this.enableNoise`:
         **->** resets the channel's length counter
   responses:
-  - "(*) why does the template you provided use `Math.random()`? [random]"
+  - "(*) why does the template you provided use `random()`? [random]"
 
 random:
   messages:
