--- a/src/data/levels/05c_APU/14_Noise Channel 1-3 - Length counter/chat/es.yml
+++ b/src/data/levels/05c_APU/14_Noise Channel 1-3 - Length counter/chat/es.yml
@@ -47,7 +47,7 @@ exercise:
       **->** si `!this.enableNoise`:
         **->** reinicia el contador de longitud del canal
   responses:
-  - "(*) ¿por qué la plantilla que diste usa `Math.random()`? [random]"
+  - "(*) ¿por qué la plantilla que diste usa `random()`? [random]"
 
 random:
   messages:
