--- a/package.json
+++ b/package.json
@@ -31,9 +31,6 @@
     "@rematch/persist": "^2.1.2",
     "@uiw/codemirror-extensions-langs": "4.12.3",
     "@uiw/react-codemirror": "4.11.6",
-    "@xterm/addon-fit": "0.10.0",
-    "@xterm/addon-image": "0.8.0",
-    "@xterm/xterm": "5.5.0",
     "bootstrap": "^5.2.0",
     "broken-neees": "^1.0.67",
     "browserfs": "^1.4.3",
@@ -75,7 +72,9 @@
     "ringbufferjs": "^2.0.0",
     "sinon": "^15.0.1",
     "sinon-chai": "^3.7.0",
-    "updated-xterm-for-react": "5.5.1",
+    "updated-xterm-for-react": "5.2.0",
+    "xterm": "5.2.0",
+    "xterm-addon-fit": "0.6.0",
     "yaml": "^2.1.1"
   },
   "overrides": {
