--- a/src/data/levels/05b_PPU/09_Backgrounds 1-2 - Drawing Name tables/chat/es.yml
+++ b/src/data/levels/05b_PPU/09_Backgrounds 1-2 - Drawing Name tables/chat/es.yml
@@ -30,12 +30,11 @@ exercise:
       **->** <agrega el código necesario> para renderizar una línea completa del fondo
   - ¡adiós!
   responses:
-  - esperá, NO ME DEJES 😭 [questions]
+  - "\"¿agrega el código necesario\"? ¿en serio? ¿eso es todo? [questions]"
 
 questions:
   messages:
-  - ok, ok 😅
-  - ¿tienes alguna pregunta?
+  - ¿qué? ¿necesitas ayuda?
   responses:
   - (*) entonces, ¿cuántos píxeles debería dibujar? ⏹ [howmany]
   - (*) ¿cómo sé la línea actual? 🌠 [line]
@@ -59,7 +58,7 @@ line:
 
 help:
   messages:
-  - sabes que `y = this.ppu.scanline`
+  - sabes que ```javascript y = this.ppu.scanline```
   - y que necesitas dibujar desde ~x = 0~ hasta ~x = 255~
   - también sabes que la pantalla es una cuadrícula de ~32x32~ tiles (de ~8x8~ píxeles cada uno)
   - y por último, ¡ya sabes cómo dibujar un tile usando tu clase 🕊️  `Tile`!
