--- a/src/data/levels/05b_PPU/14_Sprites 2-6 - Evaluation/chat/es.yml
+++ b/src/data/levels/05b_PPU/14_Sprites 2-6 - Evaluation/chat/es.yml
@@ -3,7 +3,7 @@ main:
   - en cada scanline, el renderizador de sprites realiza una evaluación de sprites 🕵️
   - prepara los sprites que necesitan ser renderizados
   responses:
-  - mhm... ¿cómo lo hace? [how]
+  - mhm... ¿cómo lo sabe? [how]
 
 how:
   messages:
