--- a/src/data/levels/05b_PPU/18_Sprites 6-6 - Sprite-zero hit/chat/es.yml
+++ b/src/data/levels/05b_PPU/18_Sprites 6-6 - Sprite-zero hit/chat/es.yml
@@ -7,15 +7,20 @@ main:
   - ¿para qué se utiliza? [usage]
 
 usage:
+  run: |
+    {{Top}}.load("sprite_zero_splitscreen.png");
   messages:
   - los juegos lo utilizan para realizar <efectos de pantalla dividida> (por ejemplo, tener un HUD estático en la parte superior y un fondo desplazándose en la parte inferior)
   - había un juego de un plomero que usaba ese truco 👨 🔧
-  - al colocar el sprite cero en una posición específica en el fondo, la PPU activa un sprite-zero hit cuando esa parte de la pantalla se renderiza
-  - esto permite a los juegos detectar el momento en que la PPU alcanza una scanline específica, y luego cambiar las coordenadas de scrolling a mitad del frame
+  - <{sprite_zero_splitscreen.png}>
+  - al colocar un sprite de moneda (el sprite cero) arriba de una moneda en el fondo, la PPU activa un sprite-zero hit cuando esa parte de la pantalla se renderiza
+  - esto permite al juego detectar el momento en que la PPU alcanza una scanline específica, y luego cambiar las coordenadas de scrolling a mitad del frame
   responses:
   - aaah [exercise]
 
 exercise:
+  run: |
+    {{Top}}.load(null, "rom");
   messages:
   - |-
     📚  en 🛸  `SpriteRenderer`, <modifica> el método `_render(...)`; debajo de `buffer[x] = ...`, agrega:
